--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.0.0",
-    "commander": "^8.3.0"
+    "chalk": "^4.0.0",
+    "commander": "^8.3.0",
+    "fs-extra": "^10.0.0",
+    "inquirer": "^8.2.0"
   }
 }
