--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "chalk": "^4.0.0",
     "commander": "^8.3.0",
+    "download-git-repo": "^3.0.2",
     "fs-extra": "^10.0.0",
-    "inquirer": "^8.2.0"
+    "inquirer": "^8.2.0",
+    "ora": "^5.4.1"
   }
 }
